[RED]: add unit test for user service, dashboard controller, etc